add credit to chenzunfeng for finding bug in CS

--- a/README
+++ b/README
@@ -258,7 +258,7 @@ CREDIT:
 Frank Warmerdam (warmerdam at pobox dot com) OpenEV/GDAL/OGR/S-57.
 Christian Gebauer Tveen (cgt at navicon dot dk) GV/OGR split.
 Vitaly Oganesyan (8vito8 at rambler ru) test GTK3 & radar code path
-
+chenzunfeng at qq com, numerous bug fix about CS
 
 LICENSE:
 ========
