--- a/test/ref_dump/README
+++ b/test/ref_dump/README
@@ -3,6 +3,11 @@
 # SD 21014MAY14
 
 
+apitrace:
+---------
+
+Record OpenGL call
+
 0 - git clone apitrace and build
 
 1 - Create trace (EGL)
@@ -12,9 +17,20 @@
     $ ./qapitrace s52glx.trace
 
 3 - Trim the trace file to a specific frame (here frame 9 is send to file trimed9.trace)
-    $ ./apitrace trim --auto --frames=9 -o trimed9.trace  ~/S52/test/s52eglx.2.trace 
+    $ ./apitrace trim --auto --frames=9 -o trimed9.trace  ~/S52/test/s52eglx.2.trace
     $ ./qapitrace trimed9.trace
-    
+
 4 - Dump frame to clear text
     $ ./apitrace dump trimed9.trace > trimed9.trace.txt
 
+
+GIMP:
+-----
+
+0 - S52_dumpS57IDPixels() or ALT-prtScr to dump window
+
+1 - open, in GIMP, as layers dump & ref dump
+
+2 - in layers mode selecte: Difference
+
+3 - optionally, use mask to endence remaining pixels
