update IHO S64 Test Data

--- a/test/ref_dump/README
+++ b/test/ref_dump/README
@@ -39,6 +39,6 @@ GIMP:
 S-64:
 -----
 
-1 - ENC_TDS_PLOTS: various screenshot
+1 - ENC_TDS_PLOTS: various screenshot of S64 ENC
 
 2 - ENC: S-64/2.1.1 Power Up/ENC_ROOT/
