--- a/TODO
+++ b/TODO
@@ -10,10 +10,15 @@ Curent focus (top priority *):
 
     GL:
 *   -handle overlaping symbol at the center of the screen (find test case to debug)
-    -send XYZ to GPU where Z=(idx col pal 6bits + trans 2bits) = 64 colors + 4 levels of transparancy
+    -send XYZ to GPU where Z=(idx col pal 6bits + trans 2bits) = 64 colors + 4 levels of transparancy = 8bits
+        -exp: peudo shadow map in GLSL using some bits left (32-8=24) [min GL ES2]
+        -exp: use shadow to gage channel gabarie
     -implement pattern scale spacing (PASP field)
-    -handle GLU_TESS_MAX_COORD, GLU_TESS_TOLERANCE (LOD)
+    -handle GLU_TESS_MAX_COORD, GLU_TESS_TOLERANCE (not implemented in libtess)
     -nice to have: fading chart boudary, calib symb, ..
+
+    S52:
+    -spot sounding (mouse hover depth feedback - vonoroide)
 
     PL:
 *   -view group or somme equivalent functionality
@@ -53,6 +58,7 @@ DONE
 ====
 (put here TODO's that has been done)
 
+    -delete superfluous vertex on same slope
     -rotate extent when chart rotate / augment view extent to fill screen
     -experimental: supression of overlapping simple lines (ie overlaping LS() not processed) (also of same disp prio AREAS/LINES)
     -combined adjacent areas of M_COVR, CATCOV=1; HODATA01 - boundary marking end of HO data. Use CSG as in _computeCentroid().
@@ -67,13 +73,13 @@ DONE
     -display text description of symbol in PLib in cursor pick
     -HTML5/SVG: s52ui (Dart & PhoneGap) handle web stuff (WebSocket)
     -code: many S52_drawStr() params could be drawn from inside S52_drawLast()
-	-PL: editor (see Pavel Kalian https://github.com/nohal/RleEditor)
+    -PL: editor (see Pavel Kalian https://github.com/nohal/RleEditor)
     -load Chart No 1 for testing C1-PLib 3.1 (the default PLib)
     -handling GDAL (world) shapefile to fit S52 framework
     -test for proper configure of openev when loading libS52.so
     -text grouping
     -click on north arrow to get north up (the code is in s52egl.c - tested on Android)
-	-ARM / android / EGL / GLESv2
+    -ARM / android / EGL / GLESv2
     -(!!)PL: GFileMonitor for new (drop in) PLib
     -put 'cursor' symbol on layer 9 (S52 say 8, but ownshp is on layer 9)
      and then use drawLast()
