--- a/README
+++ b/README
@@ -34,7 +34,7 @@ be used as a paper chart replacement.
 SCREENSHOT:
 ===========
 
-S-64 [GB4X0000.000] (S52/test/ref_dump/GB4X0000.png)
+![GB4X0000.000] (S52/test/ref_dump/GB4X0000.png)
 
 
 SPECIFICATION:
